cmake_minimum_required(VERSION 3.28)
cmake_policy(SET CMP0048 NEW)
PROJECT(dangerfarm_contact VERSION 0.0.1)

string(
    REPLACE "." ";" DANGERFARM_CONTACT_VERSION_LIST "${CMAKE_PROJECT_VERSION}")
list(GET DANGERFARM_CONTACT_VERSION_LIST 0 DANGERFARM_CONTACT_VERSION_MAJOR)
list(GET DANGERFARM_CONTACT_VERSION_LIST 1 DANGERFARM_CONTACT_VERSION_MINOR)
list(GET DANGERFARM_CONTACT_VERSION_LIST 2 DANGERFARM_CONTACT_VERSION_REL)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules")

#Build config.h
configure_file(config.h.cmake include/dangerfarm_contact/config.h)

#includes
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)

SET(COMPILER_CHOOSER ${CMAKE_SOURCE_DIR}/scripts/compiler-chooser.sh)
SET(LINKER_CHOOSER ${CMAKE_SOURCE_DIR}/scripts/linker-chooser.sh)

SET(C_BUILD_OPTIONS
    -fPIC -O2 -Wall -Werror -Wextra -Wpedantic
    -Wno-unused-command-line-argument)

#dependencies
find_package(PkgConfig REQUIRED)
pkg_check_modules(LMDB REQUIRED lmdb)
pkg_check_modules(MINUNIT REQUIRED minunit)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

#libcontact build
AUX_SOURCE_DIRECTORY(src/libcontact DANGERFARM_CONTACT_LIB_SOURCES)
ADD_LIBRARY(contact STATIC ${DANGERFARM_CONTACT_LIB_SOURCES})
TARGET_COMPILE_OPTIONS(contact PRIVATE ${C_BUILD_OPTIONS})

#ctool build
AUX_SOURCE_DIRECTORY(src/ctool DANGERFARM_CONTACT_CTOOL_SOURCES)
ADD_EXECUTABLE(ctool ${DANGERFARM_CONTACT_CTOOL_SOURCES})
TARGET_COMPILE_OPTIONS(ctool PRIVATE ${C_BUILD_OPTIONS})
TARGET_LINK_LIBRARIES(ctool PRIVATE contact)

#contactdb build
AUX_SOURCE_DIRECTORY(src/contactdb DANGERFARM_CONTACT_CONTACTDB_SOURCES)
ADD_EXECUTABLE(contactdb ${DANGERFARM_CONTACT_CONTACTDB_SOURCES})
TARGET_COMPILE_OPTIONS(
    contactdb PRIVATE ${C_BUILD_OPTIONS} -I ${LMDB_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(
    contactdb PRIVATE contact ${LMDB_LINK_LIBRARIES} Threads::Threads)
