ADD_SUBDIRECTORY(contactdb_accept_and_dispatch)
ADD_SUBDIRECTORY(contactdb_connection_counter_get)
ADD_SUBDIRECTORY(contactdb_connection_counter_get_and_decrement)
ADD_SUBDIRECTORY(contactdb_connection_counter_get_and_increment)
ADD_SUBDIRECTORY(contactdb_connection_create_release)
ADD_SUBDIRECTORY(contactdb_connection_form_append)
ADD_SUBDIRECTORY(contactdb_connection_form_delete)
ADD_SUBDIRECTORY(contactdb_connection_form_get)
ADD_SUBDIRECTORY(contactdb_connection_form_get_first)
ADD_SUBDIRECTORY(contactdb_connection_form_get_first_shadow)
