ADD_SUBDIRECTORY(contactdb_accept_and_dispatch)
ADD_SUBDIRECTORY(contactdb_connection_counter_get)
ADD_SUBDIRECTORY(contactdb_connection_counter_get_and_decrement)
ADD_SUBDIRECTORY(contactdb_connection_counter_get_and_increment)
ADD_SUBDIRECTORY(contactdb_connection_create_release)
ADD_SUBDIRECTORY(contactdb_connection_form_append)
ADD_SUBDIRECTORY(contactdb_connection_form_delete)
ADD_SUBDIRECTORY(contactdb_connection_form_get)
ADD_SUBDIRECTORY(contactdb_connection_form_get_first)
ADD_SUBDIRECTORY(contactdb_connection_form_get_first_shadow)
ADD_SUBDIRECTORY(contactdb_connection_form_get_next)
ADD_SUBDIRECTORY(contactdb_connection_form_get_next_shadow)
ADD_SUBDIRECTORY(contactdb_connection_form_get_shadow)
ADD_SUBDIRECTORY(contactdb_context_create_from_arguments)
ADD_SUBDIRECTORY(contactdb_context_create_from_arguments_bind_local_socket)
ADD_SUBDIRECTORY(contactdb_context_create_from_arguments_read_args)
ADD_SUBDIRECTORY(contactdb_context_create_from_arguments_set_string)
ADD_SUBDIRECTORY(contactdb_daemonize)
ADD_SUBDIRECTORY(contactdb_decode_and_dispatch)
ADD_SUBDIRECTORY(contactdb_dnd_contact_form_append)
ADD_SUBDIRECTORY(contactdb_dnd_contact_form_delete)
