ADD_SUBDIRECTORY(mdb_env_create_close_shadow)
ADD_SUBDIRECTORY(mdb_env_dbi_open_close_shadow)
ADD_SUBDIRECTORY(mdb_env_open_shadow)
ADD_SUBDIRECTORY(mdb_env_set_mapsize_shadow)
ADD_SUBDIRECTORY(mdb_env_set_maxdbs_shadow)
ADD_SUBDIRECTORY(mdb_txn_begin_abort_shadow)
ADD_SUBDIRECTORY(mdb_txn_begin_commit_shadow)
