ADD_SUBDIRECTORY(accept)
ADD_SUBDIRECTORY(bind_nop)
ADD_SUBDIRECTORY(cap_enter)
ADD_SUBDIRECTORY(chmod)
ADD_SUBDIRECTORY(close)
ADD_SUBDIRECTORY(close_fd_nop)
ADD_SUBDIRECTORY(close_nop)
ADD_SUBDIRECTORY(fork)
ADD_SUBDIRECTORY(fork_waitpid_with_pid_tracking)
ADD_SUBDIRECTORY(listen)
ADD_SUBDIRECTORY(pledge)
ADD_SUBDIRECTORY(read)
ADD_SUBDIRECTORY(setsid)
ADD_SUBDIRECTORY(socket)
ADD_SUBDIRECTORY(unlink_nop)
ADD_SUBDIRECTORY(write)
